style.css
@font-face {
  font-family: Roboto;
  src: url("./Roboto-Black.ttf");
}

@font-face {
  font-family: RobotoLight;
  src: url("./Roboto-Light.ttf");
}

@font-face {
  font-family: RobotoItalic;
  src: url(./Roboto-LightItalic.ttf);
}

.body {
  margin: 0;
  padding: 0;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
}

header {
  background-color: #1f2937;
  color: #f9faf8;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 8px 100px;
}

.logo-text {
  font-size: 24px;
  font-family: Roboto;
}

.logo-text:hover {
  cursor: grab;
}

ul {
  margin: 0;
  padding: 0;
  list-style: none;
  text-decoration: none;
  display: flex;
  gap: 16px;
  font-family: RobotoLight;
  font-size: 14px;
}

li:hover {
  text-decoration: underline;
  cursor: grab;
}

.m1 {
  padding: 100px;
  display: flex;
  justify-content: center;
  align-content: center;
  gap: 16px;
  background-color: #1f2937;
}

.m1 .left,
.right {
  width: 450px;
  flex-basis: auto;
}

.m1 .left {
  display: flex;
  flex-direction: column;
}

.m1 .left .main-text {
  font-family: Roboto;
  margin: 0;
  font-size: 48px;
  color: #f9faf8;
}

.m1 .left .subtext {
  font-family: RobotoLight;
  font-size: 18px;
  color: #d7d8d6;
}

.m1 .left .signup {
  font-family: Roboto;
  color: #f9faf8;
  background-color: #3882f6;
  border: 0;
  border-radius: 8px;
  height: 30px;
  width: 100px;
  flex: 0 0 auto;
}

.m1 .left .signup:hover {
  cursor: grab;
  text-decoration: underline;
  transition: 0.7s;
}

.m1 .right {
  background-color: #6d747d;
  display: flex;
  justify-content: center;
  align-items: center;
  color: #f9faf8;
  font-family: RobotoLight;
}

.m2 {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 32px;
  text-align: center;
}

.m2 .main-text {
  font-family: Roboto;
  color: #1f2937;
  font-size: 36px;
  margin: 0;
  padding: 16px 0 48px;
}

.m2 .information {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 50px;
  flex-wrap: wrap;
}

.m2 .information .info {
  width: 150px;
  flex: 0 1 auto;
  font-size: 16px;
  color: #202732;
  font-family: RobotoLight;
}

.m2 .information .info .square {
  width: 150px;
  height: 150px;
  border: 3px solid #3882f6;
  border-radius: 10px;
}

.m3 {
  background-color: #e5e7eb;
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 100px;
  flex-wrap: nowrap;
}

.m3 .quote {
  font-family: RobotoItalic;
  font-size: 34px;
  color: #1f2937;
  flex: 1 1;
  margin: 0;
}

.m3 .quote-author {
  font-family: Roboto;
  color: #1f2937;
  font-size: 24px;
  align-self: flex-end;
  margin-right: 40px;
}

.m4 {
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 100px;
}

.m4 .box {
  box-sizing: border-box;
  width: 1000px;
  height: 125px;
  background-color: #3882f6;
  border-radius: 10px;
  padding: 25px 150px;
  display: flex;
  align-items: center;
}

.m4 .left {
  display: flex;
  flex-direction: column;
  justify-content: center;
  gap: 5px;
}

.call-to-action {
  color: #f9faf8;
  font-family: Roboto;
  margin: 0;
  font-size: 18px;
}

.m4 .subtext {
  margin: 0;
  color: #f9faf8;
  font-family: RobotoLight;
  font-size: 14px;
}

.bttn-container {
  display: flex;
  align-items: center;
  justify-content: end;
  flex-grow: 1;
}

.bttn-container .signup {
  font-family: Roboto;
  color: #f9faf8;
  background-color: #3882f6;
  border: 2px solid #f9faf8;
  border-radius: 8px;
  height: 30px;
  width: 100px;
}

.bttn-container .signup:hover {
  text-decoration: underline;
  cursor: grab;
  background-color: #f9faf8;
  color: #3882f6;
}

footer {
  background-color: #1f2937;
  text-align: center;
  padding: 20px;
}

.copyright {
  font-size: 16px;
  color: #f9faf8;
  font-family: RobotoLight;
}

